<resources>
    <string name="app_name">LocationAlarm</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="GPSAlertDialogTitle">GPS Settings</string>
    <string name="GPSAlertDialogMessage">Please turn on the GPS</string>
    <string name="action_settings">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Toast.Validation">Please enter valid data for all fields</string>
    <string name="AreYouSure">Delete?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Toast_error">Error</string>
    <string name="remind_me_to">Remind me to...</string>
    <string name="turn_on_internet">Not connected to internet</string>
    <string name="turn_on_gps">Turn on GPS</string>
    <string name="ok">OK</string>

    //hint labels
    <string name="login_mobile_hint"><font size="15">+91 Mobile</font></string>
    <string name="login_pwd_hint"><font size="15">Password</font></string>
    <string name="reg_username_hint"><font size="15">Username</font></string>
    <string name="reg_email_hint"><font size="15">Email</font></string>

    //Text labels
    <string name="text_forgotpassword">Forgot Password?</string>
    <string name="text_or">OR</string>
    <string name="text_use_fingerprint">Use finger print to sign in</string>
    <string name="text_reminder_accepted">Reminder Accepted!!</string>

    //Button labels
    <string name="text_sign_in">Sign In</string>
    <string name="text_signout">Sign Out</string>
    <string name="text_register">Register</string>

    //Alarmringing Labels
    <string name="show_alarm_msg">Get Milk \n and start the day with</string>
    <string name="show_msg">the nice cup of coffee</string>
    <string name="show_time_string">Now the time is </string>
    <string name="show_time"> 6:30 am</string>
    <string name="show_msg_morning">Good Morning</string>
    <string name="show_msg_afternoon">Good Afternoon</string>
    <string name="show_msg_evening">Good Evening</string>


</resources>
