<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_alarm_ringing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tab_layout_top_gradient"
    android:orientation="vertical"

    tools:context="com.trianz.locationalarm.AlarmRingingActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Good Morning"
        android:textColor="@color/color_white"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="20dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kalpana Mandloi"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/color_white"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_fingerprint_144"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_alarm_msg"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_white"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_msg"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_time_string"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textColor="@color/color_Orange"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_time"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/color_Orange"
        android:layout_gravity="center"/>
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="3"
            android:padding="30dp"
            android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageView1"
                    app:srcCompat="@mipmap/ic_wakeup_alarm_snooze"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginRight="50dp"

                    />


                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/circle_view"
                        app:srcCompat="@mipmap/ic_wakeup_alarm_ringing"
                        android:id="@+id/alarmvibrate"
                        android:layout_margin="10dp"

                        />

            <ImageView
                android:id="@+id/imageView3"
                app:srcCompat="@mipmap/ic_alarm_off_white_24dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                />

        </LinearLayout>
</LinearLayout>
