<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alarm_ringing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@xml/tab_layout_top_gradient"
    android:orientation="vertical"
    tools:context="com.trianz.locationalarm.AlarmRingingActivity">

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="#fff"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/alarm_User_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/pendulum_ringing"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/belllll"
        android:tint="@color/color_white"/>

    <TextView
        android:id="@+id/getAlarm_Msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/show_alarm_msg"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/reminderEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/show_msg"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:text="@string/show_time_string"
            android:textAlignment="center"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tv_currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/show_time"
            android:textAlignment="center"
            android:textColor="@color/color_Orange"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/alarmControl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="30dp"
        android:weightSum="6">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_wakeup_alarm_snooze" />

        <com.skyfishjy.library.RippleBackground xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            app:rb_color="#FFFFFF"
            app:rb_duration="3000"
            app:rb_radius="8dp"
            app:rb_rippleAmount="5"
            app:rb_scale="6">

            <ImageView
                android:id="@+id/alarmvibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@xml/circle_view"
                app:srcCompat="@drawable/ic_wakeup_alarm_ringing" />
        </com.skyfishjy.library.RippleBackground>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_alarm_off_white_24dp" />

    </LinearLayout>

</LinearLayout>